fix：the table operation bar will not be covered by the zebra stripe style

--- a/src/SearchTable/index.scss
+++ b/src/SearchTable/index.scss
@@ -18,17 +18,18 @@
     .ant-table-cell-row-hover {
       background: #f5f7fa !important;
     }
-
     .ant-table-cell-row-hover > td {
       background: #f5f7fa !important;
     }
   }
   .even {
     background-color: rgba(250, 250, 250, 1);
+    .ant-table-cell-fix-right {
+      background: transparent;
+    }
     .ant-table-cell-row-hover {
       background: #f5f7fa !important;
     }
-
     .ant-table-cell-row-hover > td {
       background: #f5f7fa !important;
     }
